# commodore

./: .codeclimate.yml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  commodore  docker-compose.yaml  playbook.yml  pyproject.toml  renovate.json  requirements.in  requirements.txt  runjob  setup.py  tox.ini  tox.mk
.github/: PULL_REQUEST_TEMPLATE.md  changelog-configuration.json
.github/ISSUE_TEMPLATE/: 02_feature_request.md  config.yml
.github/workflows/: build-virtualenv-caches.yml  cleanup-pr-tag.yml  container-image.yml  coverage.yml  publish-pypi.yml  push-kapitan.yml  push.yml  test.yml
.qlty/: qlty.toml
commodore/: __init__.py  __main__.py  catalog.py  cli.py  cluster.py  commodore.py  compile.py  component_template.py  config.py  copy_helm_bindings.py  dependency_mgmt.py  dependency_syncer.py  dependency_templater.py  fetch_config.py  git.py  gitrepo.py  helpers.py  inventory.py  k8sobject.py  login.py  multi_dependency.py  normalize_url.py  postprocess.py  refs.py  render.py  target.py  tokencache.py  tools.py  version.py
commodore/cli/: __init__.py  catalog.py  component.py  inventory.py  oidc.py  options.py  package.py  tool.py
commodore/component/: __init__.py  compile.py  template.py
commodore/component-template/: cookiecutter.json
commodore/component-template/hooks/: post_gen_project.py
commodore/component-template/{{ cookiecutter.slug }}/: .editorconfig  .gitignore  .sync.yml  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.vars.mk  README.md  renovate.json
commodore/cruft/: __init__.py  __main__.py  _cli.py  _logo.py  exceptions.py
commodore/cruft/_commands/: check.py  diff.py  link.py  update.py
commodore/dependency_mgmt/: __init__.py  component_library.py  discovery.py  jsonnet_bundler.py  tools.py  version_parsing.py
commodore/filters/: helm_namespace.jsonnet
commodore/gitrepo/: __init__.py  diff.py
commodore/helm_bindings/inputs/: helm_binding.py
commodore/inventory/: __init__.py  lint.py  lint_components.py  lint_dependency_specification.py  lint_deprecated_parameters.py  parameters.py  render.py
commodore/lib/: commodore.libjsonnet  kube.libjsonnet  kube.libsonnet
commodore/lib/kube-libsonnet/: kube.libsonnet
commodore/package/: __init__.py  compile.py  sync.py  template.py
commodore/postprocess/: __init__.py  builtin_filters.py  inventory.py  jsonnet.py
commodore/scripts/: run-kustomize
component-template/: cookiecutter.json
component-template/{{ cookiecutter.project_slug }}/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  playbook.yml
component-template/{{ cookiecutter.project_slug }}/class/: defaults.yml  {{ cookiecutter.component }}.yml
component-template/{{ cookiecutter.project_slug }}/component/: app.jsonnet  main.jsonnet
component-template/{{ cookiecutter.project_slug }}/docs/: antora.yml
component-template/{{ cookiecutter.project_slug }}/lib/: {{ cookiecutter.component }}.libjsonnet
component-template/{{ cookiecutter.project_slug }}/postprocess/: filters.yml
component-template/{{ cookiecutter.slug }}/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  playbook.yml
component-template/{{ cookiecutter.slug }}/.github/: PULL_REQUEST_TEMPLATE.md
component-template/{{ cookiecutter.slug }}/component/: main.jsonnet
component-template/{{ cookiecutter.slug }}/docs/: antora.yml
component-template/{{ cookiecutter.slug }}/lib/: {{ cookiecutter.slug }}.libjsonnet
docs/: antora.yml  local-mode.md  writing-a-component.md
docs/modules/ROOT/: nav.adoc
filters/: helm_namespace.jsonnet
lib/: commodore.libjsonnet
tests/: bench_component.py  bench_gitrepo.py  conftest.py  mock_git.py  mock_gitrepo.py  test_catalog.py  test_catalog_compile.py  test_cli.py  test_cli_catalog.py  test_cli_component.py  test_cli_functions.py  test_cli_inventory.py  test_cli_oidc.py  test_cli_package.py  test_cli_tool.py  test_cluster.py  test_commodore_libjsonnet.py  test_compile.py  test_compile_meta.py  test_component.py  test_component_compile.py  test_component_new.py  test_component_template.py  test_config.py  test_dependency_mgmt.py  test_dependency_mgmt_component_library.py  test_dependency_mgmt_discovery.py  test_dependency_mgmt_jsonnet_bundler.py  test_dependency_mgmt_tools.py  test_dependency_mgmt_version_parsing.py  test_dependency_sync.py  test_fetch_config.py  test_git.py  test_gitrepo.py  test_gitrepo_diff.py  test_helpers.py  test_inventory.py  test_inventory_lint.py  test_inventory_lint_components.py  test_inventory_lint_deprecated_parameters.py  (+19 more)
tests/jsonnet/: envList.json  envList.jsonnet  fixupDir.json  fixupDir.jsonnet  generateResources.json  generateResources.jsonnet  getValueOrDefault.json  getValueOrDefault.jsonnet  inventory.json  inventory.jsonnet  inventory.yaml  list_dir.json  list_dir.jsonnet  makeMergeable.json  makeMergeable.jsonnet  namespaced.json  namespaced.jsonnet  noProxyVars.yaml  proxyVars.json  proxyVars.jsonnet  proxyVars.yaml  renderArray.json  renderArray.jsonnet  yaml_load.json  yaml_load.jsonnet
tests/testdata/catalog_list/: id_multi  id_single  json_multi  pretty_multi  yml_multi
tests/testdata/github/: helm-helm-releases-latest.json  helm-helm.json  kubernetes-sigs-kustomize-releases-latest.json  kubernetes-sigs-kustomize.json  projectsyn-jsonnet-bundler-releases-latest.json  projectsyn-jsonnet-bundler.json  projectsyn-package-foo-archived-response.json  projectsyn-package-foo-response-issue-comment.json  projectsyn-package-foo-response-issue.json  projectsyn-package-foo-response-pr.json  projectsyn-package-foo-response-pulls.json  (+1 more)
tests_cruft/: __init__.py  test_api.py  test_cli.py  test_exceptions.py  test_utils.py
tools/: Dockerfile.build_kapitan_helm_binding  Dockerfile.component_test  Dockerfile.flux  Dockerfile.kapitan  build_kapitan_helm_binding.sh  create_secret.sh  entrypoint.sh  install-jb.sh  patch-kapitan.sh  requirements-from-pipfile.py  requirements-from-pyproject.py  reveal.sh  ssh  tools.py
(+63 files in other folders)
