[tool.poetry]
name = "syn-commodore"
version = "v0.0.0"
description = "Commodore provides opinionated tenant-aware management of Kapitan inventories and templates. Commodore uses Kapitan for the heavy lifting of rendering templates and resolving a hierachical configuration structure."
readme = "README.md"
authors = ["VSHN AG <info@vshn.ch>"]
license = "BSD-3-Clause"
homepage = "https://github.com/projectsyn/commodore"
documentation = "https://syn.tools/commodore/index.html"
packages = [
    {include = "commodore"}
]
include = [
    "commodore/lib/commodore.libjsonnet",
    "commodore/lib/kube.libsonnet",
    "commodore/lib/kube.libjsonnet",
    "commodore/lib/kube-libsonnet/kube.libsonnet",
    "commodore/filters/helm_namespace.jsonnet",
    "commodore/scripts/run-kustomize",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
# NOTE: We restrict boto3/botocore versions to reduce complexity of Poetry's
# dependency resolution significantly, cf.
# https://github.com/orgs/python-poetry/discussions/8165#discussioncomment-6387378
# We put those dependencies first to constrain the Poetry dependency solver
# which processes dependencies in the order they're listed. Without these
# restrictions, the broad required boto3 dependency in Kapitan makes
# dependency resolution very slow.
boto3 = "^1.26.145"
botocore="^1.29.145"
kapitan = "0.32.0"
click = "8.1.7"
# Kapitan requires exactly 3.1.30
gitpython = "3.1.41"
requests = "2.31.0"
url-normalize = "1.4.3"
python-dotenv = "1.0.0"
importlib-metadata = "7.0.1"
pyxdg = "0.28"
cruft = "2.15.0"
oauthlib = "3.2.2"
pyjwt = "2.8.0"
PyGithub = "2.1.1"
reclass-rs = "0.1.1"

[tool.poetry.dev-dependencies]
tox = "3.28.0"
pytest = "7.4.4"
pytest-xdist = "3.5.0"
pytest-benchmark = "4.0.0"
responses = "0.24.1"
black = "23.12.1"
pyfakefs = "5.3.2"
pytest-cov = "4.1.0"
pylint = "3.0.3"
types-toml = "0.10.8.7"
examples = "1.0.2"
pytest-mock = "^3.8.2"

[tool.poetry.scripts]
commodore = 'commodore.cli:main'
local_reveal = 'tools.tools:reveal'
compile = 'tools.tools:compile'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
