[tool.poetry]
name = "syn-commodore"
version = "v0.0.0"
description = "Commodore provides opinionated tenant-aware management of Kapitan inventories and templates. Commodore uses Kapitan for the heavy lifting of rendering templates and resolving a hierachical configuration structure."
readme = "README.md"
authors = ["VSHN AG <info@vshn.ch>"]
license = "BSD-3-Clause"
homepage = "https://github.com/projectsyn/commodore"
documentation = "https://syn.tools/commodore/index.html"
packages = [
    {include = "commodore"}
]
include = [
    "commodore/lib/commodore.libjsonnet",
    "commodore/lib/kube.libsonnet",
    "commodore/lib/kube.libjsonnet",
    "commodore/lib/kube-libsonnet/kube.libsonnet",
    "commodore/filters/helm_namespace.jsonnet",
    "commodore/scripts/run-kustomize",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
# NOTE: We restrict boto3/botocore versions to reduce complexity of Poetry's
# dependency resolution significantly, cf.
# https://github.com/orgs/python-poetry/discussions/8165#discussioncomment-6387378
# We put those dependencies first to constrain the Poetry dependency solver
# which processes dependencies in the order they're listed. Without these
# restrictions, the broad required boto3 dependency in Kapitan makes
# dependency resolution very slow.
boto3 = "^1.26.145"
botocore="^1.29.145"
kapitan = "0.34.7"
click = "8.3.1"
gitpython = "3.1.45"
requests = "2.32.5"
url-normalize = "2.2.1"
python-dotenv = "1.2.1"
pyxdg = "0.28"
cruft = "2.16.0"
oauthlib = "3.3.1"
pyjwt = "2.10.1"
PyGithub = "2.8.1"
reclass-rs = "0.9.0"
gojsonnet = "0.21.0"
pygobuildinfo = "0.1.26"

[tool.poetry.dev-dependencies]
tox = "3.28.0"
pytest = "9.0.1"
pytest-xdist = "3.8.0"
pytest-benchmark = "5.2.3"
responses = "0.25.8"
black = "25.11.0"
pyfakefs = "5.10.2"
pytest-cov = "7.0.0"
pylint = "4.0.4"

[tool.poetry.scripts]
commodore = 'commodore.cli:main'
kapitan = 'kapitan.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
